modificacion del footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css">
 
-    <title>Document</title>
+    <title> Pasea-DOG-es </title>
 
 </head>
 
@@ -118,8 +118,9 @@
 
     <footer>
         <p>Seguinos en nuestras redes:</p>
-        <a class="nameRed" href="https://www.instagram.com/">Instagram</a>
+        <a href="https://www.instagram.com/">Instagram</a>
         <img class="logoInsta" src="./images/instagram-logo.png" alt="">
+        <a href="#"> Pasea-DOG-es </a>
     </footer>
 
 </body>
