--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,8 +41,9 @@
 
     <footer>
         <p>Seguinos en nuestras redes:</p>
-        <a class="nameRed" href="https://www.instagram.com/">Instagram</a>
-        <img class="logoInsta" src="../images/instagram-logo.png" alt="">
+        <a href="https://www.instagram.com/">Instagram</a>
+        <img class="logoInsta" src="./images/instagram-logo.png" alt="">
+        <a href="#"> Pasea-DOG-es </a>
     </footer>
     
 </body>
