--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <img class="logo" src="./images/logo-paseo.png" alt="">
         <nav>
             <ul>
-                <li>
+                <li class="nav-hover">
                     <a href="#">Inicio</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./pages/nosotros.html">Nosotros</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./pages/paseadores.html">Paseadores</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./pages/contacto.html">Contacto</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./pages/emergencia.html">Emergencias</a>
                 </li>
             </ul>
