--- a/pages/paseadores.html
+++ b/pages/paseadores.html
@@ -16,19 +16,19 @@
         <img class="logo" src="../images/logo-paseo.png" alt="">
         <nav>
             <ul>
-                <li>
+                <li class="nav-hover">
                     <a href="../index.html">Inicio</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./nosotros.html">Nosotros</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="#">Paseadores</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./contacto.html">Contacto</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./emergencia.html">Emergencias</a>
                 </li>
             </ul>
