--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,19 +15,19 @@
         <img class="logo" src="../images/logo-paseo.png" alt="">
         <nav>
             <ul>
-                <li>
+                <li class="nav-hover">
                     <a href="../index.html">Inicio</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./nosotros.html">Nosotros</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./paseadores.html">Paseadores</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="#">Contacto</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./emergencia.html">Emergencias</a>
                 </li>
             </ul>
