--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -16,19 +16,19 @@
         <img class="logo" src="../images/logo-paseo.png" alt="">
         <nav>
             <ul>
-                <li>
+                <li class="nav-hover">
                     <a href="../index.html">Inicio</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="#">Nosotros</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./paseadores.html">Paseadores</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./contacto.html">Contacto</a>
                 </li>
-                <li>
+                <li class="nav-hover">
                     <a href="./emergencia.html">Emergencias</a>
                 </li>
             </ul>
