--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css">
 
@@ -14,115 +16,84 @@
 
 <body>
     <header>
-        <img class="logo" src="./images/logo-paseo.png" alt="">
-        <nav>
-            <ul>
-                <li class="nav-hover">
-                    <a href="#">Inicio</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./pages/nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./pages/paseadores.html">Paseadores</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./pages/contacto.html">Contacto</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./pages/emergencia.html">Emergencias</a>
-                </li>
-            </ul>
-        </nav>
+        <section class="navbar-new">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img class="logo" src="./images/logo-paseo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" aria-current="page" href="#"> Inicio </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./pages/nosotros.html"> Nosotros </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./pages/paseadores.html"> Paseadores </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./pages/contacto.html"> Contacto </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./pages/emergencia.html"> Emergencias </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </section>
     </header>
 
     <main>
         <section class="banner">
-            <h1 class="tituloPagina" >Pasea-DOG-es</h1>
-            <h2>Lo que tu perro necesita</h2>
+            <h1 class="tituloPagina"> Pasea-DOG-es </h1>
+            <h2> Lo que tu perro necesita </h2>
         </section>
 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis maxime qui nemo laborum esse itaque
-            illum molestiae, nihil cupiditate odio quod, sit aliquid quae eius ducimus tempore repellendus? Veniam
-            reprehenderit, nihil similique recusandae quaerat dolorem fugit saepe obcaecati quisquam aliquid tempore
-            blanditiis in, vitae ipsa est minus labore modi dolorum rem consectetur impedit quod! Maxime quia dolor
-            laudantium illum accusantium nulla optio necessitatibus? Quos dolorem esse tempore distinctio autem
-            asperiores, beatae reprehenderit, repellat quas corrupti laboriosam placeat ratione quam? Accusantium,
-            molestias non esse repudiandae laudantium eveniet at adipisci? Tempora delectus et expedita ratione neque.
-            Inventore ex temporibus voluptatibus, eveniet aperiam dolorum. Qui ab dignissimos fugit. In nemo quam
-            corrupti quidem vitae odit perferendis cum. Hic ratione delectus deserunt perferendis. Voluptates, eaque
-            doloremque a aspernatur mollitia blanditiis eos fugiat commodi est ullam rem vero impedit nulla consequatur
-            vitae atque sequi illum neque. Doloribus architecto nostrum nemo aliquid quam provident cumque, eius laborum
-            deleniti eum ipsum ipsam omnis dicta minus unde, atque mollitia quaerat ab non debitis tenetur voluptatibus
-            nulla adipisci quis! Inventore dolore ipsam excepturi nesciunt, illum temporibus animi quaerat vero,
-            asperiores sunt, beatae hic esse debitis et doloribus impedit dolorum architecto voluptates assumenda? Hic
-            veniam autem recusandae velit id! Aperiam facilis ducimus culpa, sapiente nisi, quasi consequatur inventore,
-            accusantium earum molestias sint. Numquam voluptatibus optio consectetur nemo alias quia excepturi natus
-            ipsum, architecto labore molestias veniam eligendi perferendis obcaecati error, laborum enim. Esse quisquam
-            quam enim ipsum vitae, molestiae sint, suscipit sequi incidunt dolorem expedita accusantium, vero soluta
-            ipsam nemo? Dolores animi placeat, molestiae facilis vero ducimus quas in porro quo officia deserunt vel
-            facere soluta dolorem reprehenderit, aliquam corrupti minus nisi corporis? Perspiciatis sint voluptatum
-            nobis possimus laborum tempore commodi dolorem a, placeat aperiam sed? Quasi impedit ipsa aspernatur numquam
-            est rem ad totam quos nesciunt distinctio ut corporis, illo animi aut incidunt. Molestias adipisci nemo non
-            dignissimos. Voluptate eligendi corporis non, quos, quae eius beatae rerum accusantium inventore
-            consequuntur aliquam maiores neque obcaecati! Accusantium beatae ut dolore nobis delectus laborum tempore
-            recusandae quisquam sit blanditiis ducimus dignissimos facilis iste alias, animi quod cumque sunt, iusto in
-            illum dicta ex consequuntur esse. Debitis a aliquid molestias eum ipsum natus, deserunt asperiores ullam! A
-            mollitia officia possimus tenetur saepe dolores voluptatem nam omnis quis fugit obcaecati, libero veniam
-            incidunt sint deleniti fugiat. Assumenda ratione facilis, consequuntur quia commodi officiis fuga, quos enim
-            unde consectetur asperiores corrupti accusamus obcaecati minima harum quae, ipsum quo soluta dolores?
-            Molestias dolor sint, labore magnam laudantium voluptatibus nobis iste inventore officiis aut corrupti
-            perferendis illum reiciendis itaque sed omnis consectetur alias perspiciatis est sequi id, dolore
-            recusandae, exercitationem impedit. Accusantium blanditiis repellat perspiciatis totam repellendus optio ab
-            assumenda ex sed consequuntur officia repudiandae explicabo sapiente, est quibusdam non nobis aut pariatur
-            quia unde! Officia, dolorum similique placeat ut beatae earum maiores expedita consequuntur, nulla id itaque
-            magni, nostrum illo est alias sequi ex minus magnam enim. A, amet rem temporibus, qui eos sint
-            necessitatibus harum tempore ullam sequi iusto reprehenderit dolorum quasi optio mollitia sit suscipit.
-            Facere eum, sed veniam quod officiis id optio laboriosam eaque vero quo neque nesciunt dicta aspernatur
-            autem expedita deserunt quae asperiores unde! Maxime fugit est nam, facere nisi accusantium consequatur ut
-            suscipit culpa at debitis distinctio optio, officiis eos, voluptate necessitatibus eveniet accusamus ipsa
-            cum labore eius cumque! Cupiditate deserunt recusandae harum corrupti rerum. Delectus nulla inventore
-            perferendis veniam earum aperiam suscipit, fugit voluptas numquam dolorum debitis esse commodi totam minus
-            repudiandae beatae fuga libero nesciunt, porro necessitatibus! Porro provident maiores eos perspiciatis iste
-            quisquam cumque. Reiciendis numquam harum minima, quod odio eum incidunt aspernatur suscipit, esse aut
-            consequuntur cum atque eveniet! Sunt, ratione inventore? Et, possimus temporibus porro, vitae culpa impedit
-            illo inventore nemo eius quos provident dolore qui tenetur libero dolorum aut corporis, fugit eum. Possimus,
-            quia id quas et laudantium reprehenderit amet corporis, cupiditate animi placeat eos a labore! Nobis
-            voluptate quos magnam, ad tempora a et nam accusamus officia saepe dolor laudantium inventore veritatis quia
-            animi eos commodi ex sapiente odio corrupti, reprehenderit iure maxime? Doloribus, officia nulla. Libero
-            molestias dolore suscipit saepe quae sint rem ad quasi reprehenderit nihil earum deleniti nesciunt
-            blanditiis, vitae sapiente labore, aspernatur explicabo sequi quidem quis voluptate. Voluptate, ex. Aperiam,
-            ea rem culpa fugiat aut, sequi obcaecati, deserunt dolorum numquam atque commodi iusto assumenda distinctio
-            vero minima maxime odit? Voluptate porro doloremque voluptatum in, libero veritatis a commodi velit nihil
-            voluptates incidunt quam quis quia, expedita modi non quisquam, earum excepturi reprehenderit! Voluptatem
-            esse sit accusantium autem, hic veritatis temporibus dignissimos repudiandae beatae deserunt, fugiat
-            assumenda eveniet maxime eaque quasi aut magnam saepe vitae earum iste possimus voluptatum blanditiis
-            aspernatur! Eligendi ipsum repellat obcaecati sed odit non autem, dolorem amet! Velit voluptate unde ratione
-            quaerat. Ab provident eum voluptatum a veritatis id delectus illum quis dolorum? Dolorum eos architecto
-            voluptates minima incidunt! Nisi incidunt eaque maxime veritatis in aspernatur ad eius, mollitia itaque
-            numquam at, autem maiores quas distinctio cupiditate sed temporibus quia facere ullam possimus odit corporis
-            debitis quis? Aliquam expedita nihil vitae quaerat eveniet id sequi doloremque veritatis! Maiores officia
-            beatae, sed aut sapiente accusamus voluptatibus rerum voluptatum. Nesciunt, repellat. Voluptates corporis
-            enim praesentium aut. Autem veritatis unde, exercitationem deserunt id praesentium dolores eos perferendis
-            sit, eveniet similique laborum, nobis dolorem animi commodi aperiam sequi magnam a ducimus ad aliquid? Nobis
-            ea neque a nesciunt accusantium ratione maxime, voluptates eum. Reiciendis, facere! Necessitatibus sint,
-            impedit aspernatur ad sequi tempora exercitationem quas dignissimos, modi voluptates vel aliquid quo a minus
-            provident est. Quia, perferendis eos id totam ab mollitia minima ducimus quod excepturi. Molestiae
-            asperiores molestias eum expedita error dicta a porro, earum eveniet, sunt ipsa quis numquam dolorem magni
-            suscipit velit ipsum aut ea tempore totam similique? Hic, adipisci ipsum voluptates voluptate possimus
-            maiores perferendis distinctio fugiat accusamus, aliquid incidunt, sapiente facilis culpa placeat autem
-            suscipit sint. Consequatur, iste quam! Praesentium earum impedit suscipit eius molestiae asperiores alias
-            recusandae, maxime commodi dolor soluta culpa voluptate distinctio ipsam veritatis ullam! At harum provident
-            similique debitis molestiae velit quasi!</p>
+        <section class="explicacion-paseos">
+            <h2>La importancia de los paseos.</h2>
+            <p>
+                contar con un amplio jardín o patio en casa puede parecernos suficiente para garantizar el bienestar y
+                el ejercicio necesario para nuestros perros, la realidad es que los paseos diarios fuera de nuestro
+                hogar
+                desempeñan un papel crucial en su desarrollo físico, mental y social. El entorno cerrado de un patio,
+                por amplio que sea, no puede competir con la riqueza de estímulos que el exterior ofrece. Los olores,
+                sonidos y vistas que los perros experimentan durante un paseo no solo son emocionantes para ellos, sino
+                también esenciales para su bienestar mental. Esta estimulación ayuda a prevenir el aburrimiento y los
+                comportamientos destructivos asociados, como masticar objetos inapropiados o ladrar excesivamente.
+                Los paseos son fundamentales para la socialización de nuestros amigos de cuatro patas. El contacto con
+                otros perros, personas y diferentes entornos les enseña cómo comportarse adecuadamente y les ayuda a ser
+                más amigables y menos temerosos ante nuevas experiencias. Un perro bien socializado es generalmente más
+                feliz, más seguro de sí mismo y tiene menos problemas de comportamiento. Aunque correr y jugar en el
+                jardín contribuye al ejercicio diario de un perro, los paseos ofrecen una actividad física más
+                estructurada y variada. Caminar por diferentes rutas y terrenos desafía a tu perro físicamente y ayuda a
+                prevenir problemas de salud como la obesidad, enfermedades cardíacas y articulares. Además, adaptar el
+                ritmo y la duración del paseo a la edad, raza y condición física de tu perro asegura que reciba el tipo
+                y la cantidad de ejercicio que realmente necesita. El tiempo que pasas paseando con tu perro es una
+                oportunidad de oro para fortalecer vuestro vínculo. Es un momento para interactuar, entrenar y
+                comunicarse de manera positiva. Los paseos regulares pueden mejorar la relación entre tú y tu perro,
+                fomentando un entendimiento mutuo y una comunicación efectiva.
+            </p>
+        </section>
     </main>
 
     <footer>
-        <p>Seguinos en nuestras redes:</p>
-        <a href="https://www.instagram.com/">Instagram</a>
-        <img class="logoInsta" src="./images/instagram-logo.png" alt="">
-        <a href="#"> Pasea-DOG-es </a>
+        <h3>Seguinos en nuestras redes:</h3>
+        <a href="https://www.instagram.com/"><img class="logoRed" src="./images/instagram-logo.png" alt=""> Instagram
+        </a>
+        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="./images/facebook_logo.png" alt="">
+            Facebook </a>
+        <a href="https://www.youtube.com/"><img class="logoRed" src="./images/youtube_logo.png" alt=""> YouTube </a>
     </footer>
 
+    <!-- Boostrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
