--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,50 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <!-- Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
 
-    <title>Document</title>
+    <title> Contacto - Pasea-DOG-es </title>
 </head>
+
 <body>
 
     <header>
-        <img class="logo" src="../images/logo-paseo.png" alt="">
-        <nav>
-            <ul>
-                <li class="nav-hover">
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./paseadores.html">Paseadores</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="#">Contacto</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./emergencia.html">Emergencias</a>
-                </li>
-            </ul>
-        </nav>
+        <section class="navbar-new">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img class="logo" src="../images/logo-paseo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" aria-current="page" href="../index.html"> Inicio </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./nosotros.html"> Nosotros </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./paseadores.html"> Paseadores </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="#"> Contacto </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./emergencia.html"> Emergencias </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </section>
     </header>
 
     <main>
-        <h1>Sumate al equipo!</h1>
-        <form action="">Completa tus datos</form>
+        <section>
+            <h1>Sumate al equipo!</h1>
+            <div>
+                <form class="formulario">
+                    <label for="nombre"> Nombre </label>
+                    <input type="text" id="nombre">
+
+                    <label for="apellido"> Apellido </label>
+                    <input type="text" id="apellido">
+
+                    <label for="sumatoria"> Contanos un poco de vos. Zonas de paseo, experiencia. ¡ Queremos conocerte! </label>
+                    <textarea name="" id="" cols="30" rows="10" placeholder=""></textarea>
+
+                    <input class="boton" type="submit">
+                    <input class="boton" type="reset">
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer>
-        <p>Seguinos en nuestras redes:</p>
-        <a href="https://www.instagram.com/">Instagram</a>
-        <img class="logoInsta" src="./images/instagram-logo.png" alt="">
-        <a href="#"> Pasea-DOG-es </a>
+        <h3>Seguinos en nuestras redes:</h3>
+        <a href="https://www.instagram.com/"><img class="logoRed" src="../images/instagram-logo.png" alt=""> Instagram
+        </a>
+        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="../images/facebook_logo.png" alt="">
+            Facebook </a>
+        <a href="https://www.youtube.com/"><img class="logoRed" src="../images/youtube_logo.png" alt=""> YouTube </a>
     </footer>
     
+    <!-- Boostrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
