--- a/pages/emergencia.html
+++ b/pages/emergencia.html
@@ -4,53 +4,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
 
-    <title>Document</title>
+    <title> Emergencias - Pasea-DOG-es </title>
 </head>
 
 <body>
     <header>
-        <img class="logo" src="../images/logo-paseo.png" alt="">
-        <nav>
-            <ul>
-                <li class="nav-hover">
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./paseadores.html">Paseadores</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./contacto.html">Contacto</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="#">Emergencias</a>
-                </li>
-            </ul>
-        </nav>
+        <section class="navbar-new">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img class="logo" src="../images/logo-paseo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" aria-current="page" href="../index.html"> Inicio </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./nosotros.html"> Nosotros </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./paseadores.html"> Paseadores </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./contacto.html"> Contacto </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="#"> Emergencias </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </section>
     </header>
 
     <main>
         <h1>Hospitales y veterinarias de emergencia:</h1>
+        <section class="emergencia"> 
+            <article class="emergency-select">
+                <select class="form-select" aria-label="select example">
+                    <option selected> Centros veterinarios: </option>
+                    <option value="1"> CMV Centenario - Warnes 59. Cdad. Autónoma de Buenos Aires</option>
+                    <option value="2"> WellVet - Lavalle 4090. Cdad. Autónoma de Buenos Aires</option>
+                    <option value="3"> Leocan - Bulnes 1286. Cdad. Autónoma de Buenos Aires</option>
+                    <option value="3"> CAVI Clínica Veterinaria - Av. La Plata 402. Cdad. Autónoma de Buenos Aires</option>
+                </select>
+            </article>
 
-        <h2>centro veterinario</h2>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d821.0031440567602!2d-58.438762130428!3d-34.60384349444839!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca6d6399a08d%3A0x951a30df1fa08b9!2sCMV%20Centenario!5e0!3m2!1ses!2sar!4v1751464656363!5m2!1ses!2sar"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <article class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d821.0031440567602!2d-58.438762130428!3d-34.60384349444839!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca6d6399a08d%3A0x951a30df1fa08b9!2sCMV%20Centenario!5e0!3m2!1ses!2sar!4v1751464656363!5m2!1ses!2sar"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </article>
+        </section>
     </main>
 
     <footer>
-        <p>Seguinos en nuestras redes:</p>
-        <a href="https://www.instagram.com/">Instagram</a>
-        <img class="logoInsta" src="./images/instagram-logo.png" alt="">
-        <a href="#"> Pasea-DOG-es </a>
+        <h3>Seguinos en nuestras redes:</h3>
+        <a href="https://www.instagram.com/"><img class="logoRed" src="../images/instagram-logo.png" alt=""> Instagram
+        </a>
+        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="../images/facebook_logo.png" alt="">
+            Facebook </a>
+        <a href="https://www.youtube.com/"><img class="logoRed" src="../images/youtube_logo.png" alt=""> YouTube </a>
     </footer>
+
+    <!-- Boostrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
