--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,44 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
 
-    <title>Document</title>
+    <title> Nosotros - Pasea-DOG-es </title>
 </head>
 
 <body>
     <header>
-        <img class="logo" src="../images/logo-paseo.png" alt="">
-        <nav>
-            <ul>
-                <li class="nav-hover">
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="#">Nosotros</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./paseadores.html">Paseadores</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./contacto.html">Contacto</a>
-                </li>
-                <li class="nav-hover">
-                    <a href="./emergencia.html">Emergencias</a>
-                </li>
-            </ul>
-        </nav>
+        <section class="navbar-new">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img class="logo" src="../images/logo-paseo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" aria-current="page" href="../index.html"> Inicio </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="#"> Nosotros </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./paseadores.html"> Paseadores </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./contacto.html"> Contacto </a>
+                            </li>
+                            <li class="nav-item nav-hover">
+                                <a class="nav-link" href="./emergencia.html"> Emergencias </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </section>
     </header>
 
     <main>
-        <section>
-           <h1>Un poco de nuestra historia.</h1>
-        </section>
+        <h1>Un poco de nuestra historia.</h1>
 
         <section>
-            <h2>como empezo todo.</h2>
+            <h2>Como empezo todo.</h2>
             <article class="nosotros">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aut magni a minus? Doloribus, incidunt!
                 Ab culpa doloremque eos veniam neque laboriosam fugiat vitae eius, temporibus accusantium ut doloribus
@@ -54,7 +64,7 @@
                 <img src="../images/perritos1.avif" alt="">
             </article>
             
-            <h2>nuestro compromiso diario:</h2>
+            <h2>Nuestro compromiso diario:</h2>
             <article class="nosotros">  
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, repellat esse sapiente est asperiores
                 accusamus repudiandae eos pariatur, praesentium, aliquam perferendis iusto necessitatibus maxime ullam
@@ -70,12 +80,18 @@
     </main>
 
     <footer>
-        <p>Seguinos en nuestras redes:</p>
-        <a href="https://www.instagram.com/">Instagram</a>
-        <img class="logoInsta" src="./images/instagram-logo.png" alt="">
-        <a href="#"> Pasea-DOG-es </a>
+        <h3>Seguinos en nuestras redes:</h3>
+        <a href="https://www.instagram.com/"><img class="logoRed" src="../images/instagram-logo.png" alt=""> Instagram
+        </a>
+        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="../images/facebook_logo.png" alt="">
+            Facebook </a>
+        <a href="https://www.youtube.com/"><img class="logoRed" src="../images/youtube_logo.png" alt=""> YouTube </a>
     </footer>
-
+    
+    <!-- Boostrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
