--- a/pages/paseadores.html
+++ b/pages/paseadores.html
@@ -78,7 +78,7 @@
                 <img src="../images/carlosPaseo.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ducimus deserunt reprehenderit, numquam
                 minima maxime sint vel placeat impedit quos.</p>
-                <a class="botonWpp" href="#"> Contactar </a>
+                <a class="botonWpp" href="#"><img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt=""> Contactar </a>
             </div>
 
             <div class="card">
@@ -86,7 +86,7 @@
                 <img src="../images/angelPaseo.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quaerat velit aliquam similique
                 pariatur? Ut cumque veritatis esse beatae facilis.</p>
-                <a class="botonWpp" href="#"> Contactar </a>
+                <a class="botonWpp" href="#"> <img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt=""> Contactar </a>
             </div>
 
             <div class="card">
@@ -94,7 +94,7 @@
                 <img src="../images/nicoPaseo.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur dolor nam distinctio culpa
                 ipsam voluptatum perspiciatis natus dolorem voluptatibus facilis.</p>
-                <a class="botonWpp" href="#"> Contactar </a>
+                <a class="botonWpp" href="#"> <img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt=""> Contactar </a>
             </div>
 
             <div class="card">
@@ -102,7 +102,7 @@
                 <img src="../images/biancaPaseo.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolore harum aliquam obcaecati
                 animi corrupti suscipit sapiente voluptatibus perspiciatis ducimus!</p>
-                <a class="botonWpp" href="#"> Contactar </a>
+                <a class="botonWpp" href="#"><img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt=""> Contactar </a>
             </div>
         </section>
     </main>
