--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Historia de nuestro grupo, inspirado al cariño de nuestros perros.">
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
 
-    <title> Nosotros - Pasea-DOG-es </title>
+    <title> Nosotros | Pasea-DOG-es </title>
 </head>
 
 <body>
@@ -48,32 +49,35 @@
     </header>
 
     <main>
-        <h1>Un poco de nuestra historia.</h1>
+        <h1 class="titulos">Un poco de nuestra historia.</h1>
 
         <section>
-            <h2>Como empezo todo.</h2>
             <article class="nosotros">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aut magni a minus? Doloribus, incidunt!
-                Ab culpa doloremque eos veniam neque laboriosam fugiat vitae eius, temporibus accusantium ut doloribus
-                suscipit sed repellendus, magnam exercitationem numquam excepturi tenetur quae. Accusantium voluptas
-                eligendi assumenda quasi repellendus. Voluptas cumque hic soluta omnis eligendi? Provident fugit dignissimos
-                facere esse voluptas rerum quo dolores odit perspiciatis, iusto beatae eaque cupiditate laudantium officia
-                perferendis ipsam numquam commodi voluptatibus distinctio vitae? Totam nostrum nulla, possimus labore et,
-                placeat quam quibusdam expedita eveniet, sint obcaecati similique nam deserunt consectetur officiis esse
-                temporibus facilis. Dicta exercitationem laudantium sint quo.</p>
+                <p>Los perros se han vuelto protagonistas en la vida cotidiana de millones de personas. Hoy forman parte
+                    de las familias. Esta transformación cultural no solo cambió el vínculo con los animales, sino que
+                    también generó una demanda creciente de trabajos especializados, como paseos, cuidados,
+                    adiestramiento y peluquería canina. Si bien estos trabajos se han vuelto cada vez más habituales,
+                    detrás de ese “boom” se esconde una realidad laboral aún desprotegida.</p>
                 <img src="../images/perritos1.avif" alt="">
             </article>
-            
-            <h2>Nuestro compromiso diario:</h2>
-            <article class="nosotros">  
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, repellat esse sapiente est asperiores
-                accusamus repudiandae eos pariatur, praesentium, aliquam perferendis iusto necessitatibus maxime ullam
-                beatae. Ut officia consequatur impedit harum, quae omnis ratione sequi quia pariatur alias minima error
-                fugiat? Exercitationem repellat fugit, voluptas assumenda aut laboriosam accusamus quidem adipisci,
-                quibusdam hic voluptate excepturi sit incidunt quam ratione perspiciatis ullam quae, earum dolorem id!
-                Repudiandae est officiis magni, tempora libero minus eum nesciunt. Quas dolorum, dolor, aliquam atque culpa
-                dolorem odio cum, ducimus quae eos repellat illo commodi veritatis rerum delectus! Cumque iste ut qui.
-                Adipisci aperiam dolorem dicta?</p>
+
+            <h2 class="titulos">Como empezo todo y nuestro compromiso diario.</h2>
+            <article class="nosotros">
+                <p>En un país donde la mitad de los trabajadores no tiene derechos laborales, los perros podrían estar
+                    señalando una salida. Mientras millones sobreviven en la informalidad, sin aportes ni obra social, y
+                    sin derechos laborales garantizados, un colectivo poco convencional decidió organizarse para cambiar esa realidad: los paseadores, adiestradores, peluqueros caninos y auxiliares
+                    veterinarios. Así nació este grupo, una iniciativa que busca
+                    profesionalizar una actividad históricamente precarizada y, al mismo tiempo, ofrecer un modelo
+                    replicable de formalización laboral.
+                    El desafío sigue vigente: muchos consideran que este tipo de trabajo no “encaja” dentro de lo que
+                    tradicionalmente se entiende como una relación laboral típica. ¿Por este motivo no les corresponden
+                    derechos? ¿Hay una forma de reconocerlos sin quitarle derechos a quienes ya los tienen? Si los
+                    trabajadores caninos -como tantos otros- no encajan en las categorías tradicionales, ¿qué hacemos?
+                    ¿Hay una solución posible?
+
+                    Estas preguntas cobran relevancia en un contexto donde las condiciones precarias de empleo solo
+                    benefician a los sectores mejor posicionados en la escala social, y no precisamente a la clase
+                    trabajadora, que resulta perjudicada y en evidente debilitamiento.</p>
                 <img src="../images/paseador2.webp" alt="">
             </article>
         </section>
@@ -87,11 +91,11 @@
             Facebook </a>
         <a href="https://www.youtube.com/"><img class="logoRed" src="../images/youtube_logo.png" alt=""> YouTube </a>
     </footer>
-    
+
     <!-- Boostrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
