--- a/pages/paseadores.html
+++ b/pages/paseadores.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Paseadores especializados para tu comodidad y tranquilidad.">
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
 
-    <title> Paseadores - Pasea-DOG-es </title>
+    <title> Paseadores | Pasea-DOG-es </title>
 </head>
 
 <body>
@@ -50,59 +51,49 @@
     <main>
         <section class="presentacion-paseadores">
             <h1>Nuestros paseadores:</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod dignissimos alias aspernatur, repudiandae
-                ipsam quas nulla totam sapiente quam laboriosam illum veniam consectetur consequuntur perspiciatis ipsum
-                maiores? Molestiae optio ipsa consectetur harum vero excepturi, at natus hic facilis rerum, eveniet vel
-                deleniti officia provident magnam quae esse sequi similique aliquid? Ea, voluptate praesentium qui
-                deleniti
-                laborum error dolorum, officia nihil, et impedit velit libero adipisci cum maxime harum eos unde.
-                Dignissimos, ipsum? Deserunt dicta unde delectus veniam ab! Nesciunt magni nihil deserunt minima atque
-                voluptatum, numquam quo non asperiores labore id. Unde distinctio voluptatem, rem neque eligendi nostrum
-                consectetur asperiores laborum iusto repellendus voluptatibus cum in odit perferendis commodi accusamus
-                beatae repellat dolorum minus fugit ut quia. Voluptas alias eligendi saepe culpa velit vitae ullam
-                excepturi
-                tempora vero, distinctio ut incidunt recusandae quos, quis praesentium porro sed voluptatibus non?
-                Sequi,
-                odio sunt dolores sint recusandae nobis placeat inventore quos sit commodi modi. Deserunt dolorum facere
-                laboriosam unde soluta vero saepe rerum illo inventore in sit, quo, harum quisquam. Dignissimos animi
-                fuga
-                aperiam voluptatibus temporibus vero corrupti. Porro, accusantium nam fuga harum aliquam magni officiis
-                deserunt, minima fugit voluptas asperiores ut inventore sequi consequuntur eaque maxime, error quam?
-                Odit,
-                voluptates voluptate.</p>
+            <p>Nuestro grupo de paseadores esta compuesto por lo mejores de toda capital. Formados desde el
+                conocimiento, experiencia y consejos de los que mas tiempo se dedican a esta practica laboral.</p>
         </section>
 
         <section class="grupoPaseador">
             <div class="card">
                 <h2> Carlos </h2>
                 <img src="../images/carlosPaseo.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ducimus deserunt reprehenderit, numquam
-                minima maxime sint vel placeat impedit quos.</p>
-                <a class="botonWpp" href="#"><img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt=""> Contactar </a>
+                <p>Paseador que se adapta a cualquier tamaño de perro. 8 años de experiencia.
+                    Zonas: Balvanera, Congreso, Recoleta.
+                </p>
+                <a class="botonWpp" href="#"><img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="">
+                    Contactar </a>
             </div>
 
             <div class="card">
                 <h2> Ángel </h2>
                 <img src="../images/angelPaseo.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quaerat velit aliquam similique
-                pariatur? Ut cumque veritatis esse beatae facilis.</p>
-                <a class="botonWpp" href="#"> <img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt=""> Contactar </a>
+                <p>Nuestra más reciente incorporacion. Se especializa en tamaños de perros medianos-chicos.
+                    Zonas: Villa Crespo, Caballito.
+                </p>
+                <a class="botonWpp" href="#"> <img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="">
+                    Contactar </a>
             </div>
 
             <div class="card">
                 <h2> Nicolás </h2>
                 <img src="../images/nicoPaseo.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur dolor nam distinctio culpa
-                ipsam voluptatum perspiciatis natus dolorem voluptatibus facilis.</p>
-                <a class="botonWpp" href="#"> <img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt=""> Contactar </a>
+                <p>Paseador de grupo reducido de 4 o 5 perros como maximo. 6 años de experiencia.
+                    Zonas: Almagro, Boedo.
+                </p>
+                <a class="botonWpp" href="#"> <img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="">
+                    Contactar </a>
             </div>
 
             <div class="card">
                 <h2> Bianca </h2>
                 <img src="../images/biancaPaseo.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolore harum aliquam obcaecati
-                animi corrupti suscipit sapiente voluptatibus perspiciatis ducimus!</p>
-                <a class="botonWpp" href="#"><img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt=""> Contactar </a>
+                <p>Paseadora versatil, todos los tamaños, grupos grandes. 10 años de experiencia.
+                    Zonas: Primera Junta, Parque Chacabuco.
+                </p>
+                <a class="botonWpp" href="#"><img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="">
+                    Contactar </a>
             </div>
         </section>
     </main>
@@ -115,11 +106,11 @@
             Facebook </a>
         <a href="https://www.youtube.com/"><img class="logoRed" src="../images/youtube_logo.png" alt=""> YouTube </a>
     </footer>
-    
+
     <!-- Boostrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
