--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sumate a la experiencia de darle lo mejor a los perros.">
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -50,7 +51,7 @@
 
     <main>
         <section>
-            <h1>Sumate al equipo!</h1>
+            <h1 class="titulos">Sumate al equipo! Conviértete en un paseador de perros.</h1>
             <div>
                 <form class="formulario">
                     <label for="nombre"> Nombre </label>
