paleta de colores

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,7 +19,7 @@
         <section class="navbar-new">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="../images/logo-paseo.png" alt=""></a>
+                    <a class="navbar-brand" href="#"><img class="logo" src="../images/logo-paseo.png" alt="logo del sitio de paseadores"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
                     también generó una demanda creciente de trabajos especializados, como paseos, cuidados,
                     adiestramiento y peluquería canina. Si bien estos trabajos se han vuelto cada vez más habituales,
                     detrás de ese “boom” se esconde una realidad laboral aún desprotegida.</p>
-                <img src="../images/perritos1.avif" alt="">
+                <img src="../images/perritos1.avif" alt="grupo de perros chicos">
             </article>
 
             <h2 class="titulos">Como empezo todo y nuestro compromiso diario.</h2>
@@ -78,18 +78,18 @@
                     Estas preguntas cobran relevancia en un contexto donde las condiciones precarias de empleo solo
                     benefician a los sectores mejor posicionados en la escala social, y no precisamente a la clase
                     trabajadora, que resulta perjudicada y en evidente debilitamiento.</p>
-                <img src="../images/paseador2.webp" alt="">
+                <img src="../images/paseador2.webp" alt="grupo de paseadores fundadores">
             </article>
         </section>
     </main>
 
     <footer>
         <h3>Seguinos en nuestras redes:</h3>
-        <a href="https://www.instagram.com/"><img class="logoRed" src="../images/instagram-logo.png" alt=""> Instagram
+        <a href="https://www.instagram.com/"><img class="logoRed" src="../images/instagram-logo.png" alt="logo de instagram"> Instagram
         </a>
-        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="../images/facebook_logo.png" alt="">
+        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="../images/facebook_logo.png" alt="logo de facebook">
             Facebook </a>
-        <a href="https://www.youtube.com/"><img class="logoRed" src="../images/youtube_logo.png" alt=""> YouTube </a>
+        <a href="https://www.youtube.com/"><img class="logoRed" src="../images/youtube_logo.png" alt="logo de youtube"> YouTube </a>
     </footer>
 
     <!-- Boostrap js -->
