--- a/pages/paseadores.html
+++ b/pages/paseadores.html
@@ -19,7 +19,7 @@
         <section class="navbar-new">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="../images/logo-paseo.png" alt=""></a>
+                    <a class="navbar-brand" href="#"><img class="logo" src="../images/logo-paseo.png" alt="logo del sitio de paseadores de perros"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
 
     <main>
         <section class="presentacion-paseadores">
-            <h1>Nuestros paseadores:</h1>
+            <h1>Paseadores:</h1>
             <p>Nuestro grupo de paseadores esta compuesto por lo mejores de toda capital. Formados desde el
                 conocimiento, experiencia y consejos de los que mas tiempo se dedican a esta practica laboral.</p>
         </section>
@@ -58,41 +58,41 @@
         <section class="grupoPaseador">
             <div class="card">
                 <h2> Carlos </h2>
-                <img src="../images/carlosPaseo.jpg" alt="">
+                <img src="../images/carlosPaseo.jpg" alt="paseador llamado Carlos">
                 <p>Paseador que se adapta a cualquier tamaño de perro. 8 años de experiencia.
                     Zonas: Balvanera, Congreso, Recoleta.
                 </p>
-                <a class="botonWpp" href="#"><img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="">
+                <a class="botonWpp" href="#"><img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="logo de whatsApp">
                     Contactar </a>
             </div>
 
             <div class="card">
                 <h2> Ángel </h2>
-                <img src="../images/angelPaseo.jpg" alt="">
+                <img src="../images/angelPaseo.jpg" alt="paseador llamado Angel">
                 <p>Nuestra más reciente incorporacion. Se especializa en tamaños de perros medianos-chicos.
                     Zonas: Villa Crespo, Caballito.
                 </p>
-                <a class="botonWpp" href="#"> <img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="">
+                <a class="botonWpp" href="#"> <img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="logo de whatsApp">
                     Contactar </a>
             </div>
 
             <div class="card">
                 <h2> Nicolás </h2>
-                <img src="../images/nicoPaseo.jpg" alt="">
+                <img src="../images/nicoPaseo.jpg" alt="Paseador llamado Nicolas">
                 <p>Paseador de grupo reducido de 4 o 5 perros como maximo. 6 años de experiencia.
                     Zonas: Almagro, Boedo.
                 </p>
-                <a class="botonWpp" href="#"> <img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="">
+                <a class="botonWpp" href="#"> <img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="logo de whatsApp">
                     Contactar </a>
             </div>
 
             <div class="card">
                 <h2> Bianca </h2>
-                <img src="../images/biancaPaseo.jpg" alt="">
+                <img src="../images/biancaPaseo.jpg" alt="Paseadora llamada Bianca">
                 <p>Paseadora versatil, todos los tamaños, grupos grandes. 10 años de experiencia.
                     Zonas: Primera Junta, Parque Chacabuco.
                 </p>
-                <a class="botonWpp" href="#"><img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="">
+                <a class="botonWpp" href="#"><img class="whatsApp-logo" src="../images/whatsApp-logo.webp" alt="logo de whatsApp">
                     Contactar </a>
             </div>
         </section>
@@ -100,11 +100,11 @@
 
     <footer>
         <h3>Seguinos en nuestras redes:</h3>
-        <a href="https://www.instagram.com/"><img class="logoRed" src="../images/instagram-logo.png" alt=""> Instagram
+        <a href="https://www.instagram.com/"><img class="logoRed" src="../images/instagram-logo.png" alt="Logo de instagram"> Instagram
         </a>
-        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="../images/facebook_logo.png" alt="">
+        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="../images/facebook_logo.png" alt="logo de facebook">
             Facebook </a>
-        <a href="https://www.youtube.com/"><img class="logoRed" src="../images/youtube_logo.png" alt=""> YouTube </a>
+        <a href="https://www.youtube.com/"><img class="logoRed" src="../images/youtube_logo.png" alt="logo de youtube"> YouTube </a>
     </footer>
 
     <!-- Boostrap js -->
