--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
 
-    <title> Contacto - Pasea-DOG-es </title>
+    <title> Contacto | Pasea-DOG-es </title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <section class="navbar-new">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="../images/logo-paseo.png" alt=""></a>
+                    <a class="navbar-brand" href="#"><img class="logo" src="../images/logo-paseo.png" alt="logo sitio de paseadores"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -72,11 +72,11 @@
 
     <footer>
         <h3>Seguinos en nuestras redes:</h3>
-        <a href="https://www.instagram.com/"><img class="logoRed" src="../images/instagram-logo.png" alt=""> Instagram
+        <a href="https://www.instagram.com/"><img class="logoRed" src="../images/instagram-logo.png" alt="logo de instagram"> Instagram
         </a>
-        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="../images/facebook_logo.png" alt="">
+        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="../images/facebook_logo.png" alt="logo de facebook">
             Facebook </a>
-        <a href="https://www.youtube.com/"><img class="logoRed" src="../images/youtube_logo.png" alt=""> YouTube </a>
+        <a href="https://www.youtube.com/"><img class="logoRed" src="../images/youtube_logo.png" alt="logo de youtube"> YouTube </a>
     </footer>
     
     <!-- Boostrap js -->
