--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <section class="navbar-new">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="./images/logo-paseo.png" alt="logo del sitio de paseadores de perros"></a>
+                    <a class="navbar-brand" href="#"><img class="logo" src="./images/logo-paseo.png"
+                            alt="logo del sitio de paseadores de perros"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -84,11 +85,14 @@
 
     <footer>
         <h3>Seguinos en nuestras redes:</h3>
-        <a href="https://www.instagram.com/"><img class="logoRed" src="./images/instagram-logo.png" alt="logo de instagram"> Instagram
+        <a href="https://www.instagram.com/"><img class="logoRed" src="./images/instagram-logo.png"
+                alt="logo de instagram"> Instagram
         </a>
-        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="./images/facebook_logo.png" alt="logo de facebook">
+        <a href="https://www.facebook.com/?locale=es_LA"> <img class="logoRed" src="./images/facebook_logo.png"
+                alt="logo de facebook">
             Facebook </a>
-        <a href="https://www.youtube.com/"><img class="logoRed" src="./images/youtube_logo.png" alt="logo de youtube"> YouTube </a>
+        <a href="https://www.youtube.com/"><img class="logoRed" src="./images/youtube_logo.png" alt="logo de youtube">
+            YouTube </a>
     </footer>
 
     <!-- Boostrap js -->
