--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <section class="navbar-new">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="./images/logo-paseo.png"
-                            alt="logo del sitio de paseadores de perros"></a>
+                    <a class="navbar-brand" href="#"><figure><img class="logo" src="./images/logo-paseo.png"
+                            alt="logo del sitio de paseadores de perros"></figure></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -51,36 +51,38 @@
     </header>
 
     <main>
-        <section class="banner">
-            <h1 class="tituloPagina"> Pasea-DOG-es </h1>
-            <h2> Lo que tu perro necesita </h2>
-        </section>
+        <section>
+            <article class="banner">
+                <h1 class="tituloPagina"> Pasea-DOG-es </h1>
+                <h2> Lo que tu perro necesita </h2>
+            </article>
 
-        <section class="explicacion-paseos">
-            <h2>La importancia de los paseos.</h2>
-            <p>
-                contar con un amplio jardín o patio en casa puede parecernos suficiente para garantizar el bienestar y
-                el ejercicio necesario para nuestros perros, la realidad es que los paseos diarios fuera de nuestro
-                hogar
-                desempeñan un papel crucial en su desarrollo físico, mental y social. El entorno cerrado de un patio,
-                por amplio que sea, no puede competir con la riqueza de estímulos que el exterior ofrece. Los olores,
-                sonidos y vistas que los perros experimentan durante un paseo no solo son emocionantes para ellos, sino
-                también esenciales para su bienestar mental. Esta estimulación ayuda a prevenir el aburrimiento y los
-                comportamientos destructivos asociados, como masticar objetos inapropiados o ladrar excesivamente.
-                Los paseos son fundamentales para la socialización de nuestros amigos de cuatro patas. El contacto con
-                otros perros, personas y diferentes entornos les enseña cómo comportarse adecuadamente y les ayuda a ser
-                más amigables y menos temerosos ante nuevas experiencias. Un perro bien socializado es generalmente más
-                feliz, más seguro de sí mismo y tiene menos problemas de comportamiento. Aunque correr y jugar en el
-                jardín contribuye al ejercicio diario de un perro, los paseos ofrecen una actividad física más
-                estructurada y variada. Caminar por diferentes rutas y terrenos desafía a tu perro físicamente y ayuda a
-                prevenir problemas de salud como la obesidad, enfermedades cardíacas y articulares. Además, adaptar el
-                ritmo y la duración del paseo a la edad, raza y condición física de tu perro asegura que reciba el tipo
-                y la cantidad de ejercicio que realmente necesita. El tiempo que pasas paseando con tu perro es una
-                oportunidad de oro para fortalecer vuestro vínculo. Es un momento para interactuar, entrenar y
-                comunicarse de manera positiva. Los paseos regulares pueden mejorar la relación entre tú y tu perro,
-                fomentando un entendimiento mutuo y una comunicación efectiva.
-            </p>
-        </section>
+            <article class="explicacion-paseos">
+                <h2>La importancia de los paseos.</h2>
+                <p>
+                    Contar con un amplio jardín o patio en casa puede parecernos suficiente para garantizar el bienestar y
+                    el ejercicio necesario para nuestros perros, la realidad es que los paseos diarios fuera de nuestro
+                    hogar
+                    desempeñan un papel crucial en su desarrollo físico, mental y social. El entorno cerrado de un patio,
+                    por amplio que sea, no puede competir con la riqueza de estímulos que el exterior ofrece. Los olores,
+                    sonidos y vistas que los perros experimentan durante un paseo no solo son emocionantes para ellos, sino
+                    también esenciales para su bienestar mental. Esta estimulación ayuda a prevenir el aburrimiento y los
+                    comportamientos destructivos asociados, como masticar objetos inapropiados o ladrar excesivamente.
+                    Los paseos son fundamentales para la socialización de nuestros amigos de cuatro patas. El contacto con
+                    otros perros, personas y diferentes entornos les enseña cómo comportarse adecuadamente y les ayuda a ser
+                    más amigables y menos temerosos ante nuevas experiencias. Un perro bien socializado es generalmente más
+                    feliz, más seguro de sí mismo y tiene menos problemas de comportamiento. Aunque correr y jugar en el
+                    jardín contribuye al ejercicio diario de un perro, los paseos ofrecen una actividad física más
+                    estructurada y variada. Caminar por diferentes rutas y terrenos desafía a tu perro físicamente y ayuda a
+                    prevenir problemas de salud como la obesidad, enfermedades cardíacas y articulares. Además, adaptar el
+                    ritmo y la duración del paseo a la edad, raza y condición física de tu perro asegura que reciba el tipo
+                    y la cantidad de ejercicio que realmente necesita. El tiempo que pasas paseando con tu perro es una
+                    oportunidad de oro para fortalecer vuestro vínculo. Es un momento para interactuar, entrenar y
+                    comunicarse de manera positiva. Los paseos regulares pueden mejorar la relación entre tú y tu perro,
+                    fomentando un entendimiento mutuo y una comunicación efectiva.
+                </p>
+            </article>
+        <section></section>
     </main>
 
     <footer>
