--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -51,7 +51,7 @@
     <main>
         <h1 class="titulos">Un poco de nuestra historia.</h1>
 
-        <section>
+        <section class="contenido">
             <article class="nosotros">
                 <p>Los perros se han vuelto protagonistas en la vida cotidiana de millones de personas. Hoy forman parte
                     de las familias. Esta transformación cultural no solo cambió el vínculo con los animales, sino que
